# korean_cards

./: README.md  pyproject.toml
src/korean_cards/: app.py  crew.py  main_OBSOLETE.py  models.py
src/korean_cards/config/: agents.yaml  tasks.yaml
