[project]
name = "korean_cards"
version = "0.1.0"
description = "korean_cards using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.5.0",
    "streamlit>=1.40.0"
]

[project.scripts]
korean_cards = "korean_cards.main:run"
run_crew = "korean_cards.main:run"
train = "korean_cards.main:train"
replay = "korean_cards.main:replay"
test = "korean_cards.main:test"
run_with_trigger = "korean_cards.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
